# chinese-txt-to-anki

./: .env.example  .gitignore  AGENTS.md  README.md  generate_anki_cards.py  prompt.txt  pyproject.toml  run_chinese.bat  run_chinese_no_api.bat
io/: input.txt
src/: api.py  cache.py  main.py  processing.py
